@@ -18,22 +18,24 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.1</version>
+        <version>3.2.2</version>
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <skip-checks>false</skip-checks>
         <java.version>21</java.version>
+        <assertj.version>3.25.1</assertj.version>
         <checkstyle.file.config>checkstyle.xml</checkstyle.file.config>
         <checkstyle.file.suppress>checkstyle-suppressions.xml</checkstyle.file.suppress>
-        <checkstyle.version>10.12.6</checkstyle.version>
+        <checkstyle.version>10.12.7</checkstyle.version>
         <classgraph.version>4.8.165</classgraph.version>
+        <classmate.version>1.7.0</classmate.version>
         <cssvalidator.version>1.0.8</cssvalidator.version>
-        <jackson-bom.version>2.16.0</jackson-bom.version>
+        <jackson-bom.version>2.16.1</jackson-bom.version>
         <jsonic.version>1.3.10</jsonic.version>
-        <log4j2.version>2.22.0</log4j2.version>
-        <mockito.version>5.8.0</mockito.version>
+        <log4j2.version>2.22.1</log4j2.version>
+        <mockito.version>5.9.0</mockito.version>
         <plexus-compiler-api.version>2.14.2</plexus-compiler-api.version>
         <plexus-javac.version>2.14.2</plexus-javac.version>
         <pmd.version>6.55.0</pmd.version>
@@ -42,9 +44,9 @@
         <exec-maven-plugin.version>3.1.1</exec-maven-plugin.version>
         <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
         <maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>
-        <maven-compiler-plugin.version>3.12.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
         <maven-site-plugin.version>4.0.0-M13</maven-site-plugin.version>
-        <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <versions-maven-plugin.version>2.16.2</versions-maven-plugin.version>
     </properties>
 
@@ -286,7 +288,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.2.2</version>
                 <configuration>
                     <addResources>true</addResources>
                     <!--
@@ -342,6 +344,7 @@
                     <showDeprecation>true</showDeprecation>
                     <compilerArgs>
                         <arg>-Xpkginfo:always</arg>
+                        <arg>-proc:full</arg>
                     </compilerArgs>
                 </configuration>
                 <dependencies>
@@ -457,7 +460,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.8.2.0</version>
+                <version>4.8.3.0</version>
                 <configuration>
                     <excludeFilterFile>excludeFindbugs.xml</excludeFilterFile>
                     <includeTests>true</includeTests>
@@ -586,7 +589,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>9.0.7</version>
+                <version>9.0.9</version>
                 <configuration>
                     <autoUpdate>false</autoUpdate>
                     <failOnError>false</failOnError>
